--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
   },
   "dependencies": {
     "@tauri-apps/api": "^2.9.0",
+    "jsonwebtoken": "^9.0.2",
+    "lucide-react": "^0.554.0",
     "next": "16.0.3",
     "react": "18.2.0",
     "react-dom": "18.2.0"
@@ -18,8 +20,10 @@
     "@tailwindcss/postcss": "^4.1.17",
     "@tailwindcss/typography": "^0.5.19",
     "@tauri-apps/cli": "^2.9.4",
+    "@types/jsonwebtoken": "^9.0.10",
     "@types/node": "24.10.1",
-    "@types/react": "19.2.6",
+    "@types/react": "^19.2.6",
+    "@types/react-dom": "^19.2.3",
     "autoprefixer": "^10.4.22",
     "postcss": "^8.5.6",
     "tailwindcss": "^4.1.17",
